--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,61 @@
 body {
 	background-color: grey;
+	margin: 0 auto;
+	text-align: center;
+	font-family: helvetica, sans-serif;
+}
+
+.list-title {
+	text-align: left;
+}
+
+nav {
+	padding: 0.5rem;
+	border-bottom: 3px white dotted;
+}
+li {
+	list-style: none;
+	text-align: left;
+}
+
+nav ul li {
+	display: inline;
+	margin-right: 1rem;
+}
+
+li a {
+	text-decoration: none;
+	font-size: 1.2rem;
+}
+
+a {
+	text-decoration: none;
+}
+
+a:visited {
+	color: white;
+}
+
+h1 {
+	text-align: center;
+	font-family: impact, sans-serif;
+}
+
+table {
+	margin: auto;
+}
+
+@media screen and (max-width: 700px) {
+	table {
+		margin-left: 1.2rem;
+		margin-right: 1.2rem;
+		min-width: 400px;
+	}
+}
+.italic {
+	font-style: italic;
+}
+
+#footer {
+	border: 1px solid black;
 }
